// To compile on Windows (from project root): packages\Google.Protobuf.Tools.3.0.0\tools\windows_x64\protoc -I=proto --csharp_out=src-gen proto/skeleton.proto

syntax = 'proto3';

//import "google/protobuf/timestamp.proto";
import "thirdparty/protobuf/google/protobuf/timestamp.proto";

package bu.vip.multikinect;

option java_package = "edu.bu.vip.multikinect";
option java_outer_classname = "Protos";

// TODO(doug) - Unique IDs for frames would be very helpful
message Frame {
  // BodyFrame.RelativeTime
  int64 time = 1;
  repeated Skeleton skeletons = 2;
  google.protobuf.Timestamp ntp_capture_time = 3;
}

message Skeleton {
  // Values match Kinect.HandState
  enum HandState {
	  UNKNOWN = 0;
    NOT_TRACKED = 1;
    OPEN = 2;
    CLOSED = 3;
    LASSO = 4;
  };

  // Values match Kinect.TrackingConfidence
  enum TrackingConfidence {
    LOW = 0;
    HIGH = 1;
  };

  // Body.TrackingId
  uint64 id = 1;
  repeated Joint joints = 2;
  HandState hand_left_state = 3;
  TrackingConfidence hand_left_confidence = 4;
  HandState hand_right_state = 5;
  TrackingConfidence hand_right_confidence = 6;
}

message Joint {
  // Values match Kinect.Joint.JointType
  enum JointType {
    SPINE_BASE = 0;
    SPINE_MID = 1;
    NECK_ = 2;
    HEAD_ = 3;
    SHOULDER_LEFT = 4;
    ELBOW_LEFT = 5;
    WRIST_LEFT = 6;
    HAND_LEFT = 7;
    SHOULDER_RIGHT = 8;
    ELBOW_RIGHT = 9;
    WRIST_RIGHT = 10;
    HAND_RIGHT = 11;
    HIP_LEFT = 12;
    KNEE_LEFT = 13;
    ANKLE_LEFT = 14;
    FOOT_LEFT = 15;
    HIP_RIGHT = 16;
    KNEE_RIGHT = 17;
    ANKLE_RIGHT = 18;
    FOOT_RIGHT = 19;
    SPINE_SHOULDER = 20;
    HAND_TIP_LEFT = 21;
    THUMB_LEFT = 22;
    HAND_TIP_RIGHT = 23;
    THUMB_RIGHT = 24;
  };

  // Values match Kinect.Joint.TrackingState
  enum TrackingState {
	  NOT_TRACKED = 0;
	  INFERRED = 1;
	  TRACKED = 2;
  };

  JointType type = 1;
  Orientation orientation = 2;
  Position position = 3;
  TrackingState tracking_state = 4;
}

message Orientation {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message Position {
  float x = 1;
  float y = 2;
  float z = 3;
}
